[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geektrust"
version = "0.0.1"
authors = [
  { name="Parthiban", email="parthimyself90@gmail.com" },
]
description = "Race Track Management Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/parthi-siva/race_track_management"
